<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/t1p1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lbl1p1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtn1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:autofillHints="n1"
        android:ems="10"
        android:hint="@string/pl1p1"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl2p1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtn1" />

    <EditText
        android:id="@+id/txtn2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:autofillHints="n2"
        android:ems="10"
        android:hint="@string/pl2p1"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnsuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:onClick="oclicksuma"
        android:text="@string/btn1p1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtn2" />

    <Button
        android:id="@+id/btnresta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:onClick="oclickresta"
        android:text="@string/btn2p1"
        app:layout_constraintStart_toEndOf="@+id/btnsuma"
        app:layout_constraintTop_toBottomOf="@+id/txtn2" />

    <Button
        android:id="@+id/btndivicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:onClick="oclickdivicion"
        android:text="@string/btn3p1"
        app:layout_constraintStart_toEndOf="@+id/btnresta"
        app:layout_constraintTop_toBottomOf="@+id/txtn2" />

    <Button
        android:id="@+id/btnmulti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:onClick="oclickmulti"
        android:text="@string/btn4p1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsuma" />

    <Button
        android:id="@+id/btnpot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:onClick="oclickpote"
        android:text="@string/btn51"
        app:layout_constraintStart_toEndOf="@+id/btnmulti"
        app:layout_constraintTop_toBottomOf="@+id/btnresta" />

    <Button
        android:id="@+id/btnn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:onClick="oclickn"
        android:text="@string/btn6p1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmulti" />

    <Button
        android:id="@+id/btnraiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:onClick="onclickraiz"
        android:text="@string/btn7p1"
        app:layout_constraintStart_toEndOf="@+id/btnn"
        app:layout_constraintTop_toBottomOf="@+id/btnpot" />

    <TextView
        android:id="@+id/lblres"
        android:layout_width="337dp"
        android:layout_height="170dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnraiz" />
</androidx.constraintlayout.widget.ConstraintLayout>